# impscope

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
impscope/: __init__.py  __main__.py  cli.py  core.py  formatter.py
